[package]
name = "async-perf-events"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.0"
perf-event = "0.4.7"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.2"

[features]

[profile.release]
lto = "thin"
#debug = true
codegen-units = 1
#rustflags = ["-C", "target-cpu=native"]
