[package]
name = "async-perf-events"
version = "0.1.0"
edition = "2021"

[dependencies]
console-subscriber = "0.1.3"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
perf-event = "0.4.7"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.7"

[features]

[profile.release]
lto = "thin"
#debug = true
codegen-units = 1
# Using target-cpu with native on release build is not advisable.
# However, this crate is currently a proof of concept and we fly by night.
rustflags = ["--cfg", "tokio_unstable", "-C", "target-cpu=native"]
